syntax = "proto3";

package greeting;

option java_package = "com.pharosproduction.grpc.greeting";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetingService {
    rpc Greet(GreetRequest) returns (GreetResponse) {};
    rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse) {};
    rpc LongGreet(stream GreetRequest) returns (GreetResponse) {};
    rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse) {};
}


